# counter-json

./: README.rst  TR_1mo_tiny.json  converter.py  pyproject.toml  reader.py  requirements.txt  utils.py
data/: TR_1mo_normal.json
sample-input/: TR_2mo_large.json
sample-output/: TR_1mo_tiny.avoid_duplicate_metadata.json  TR_1mo_tiny.simplify_performance.json
