[tool.poetry]
name = "counter-json"
version = "0.1.0"
description = ""
authors = ["Beda Kosata <beda.kosata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
